# InfraGenius

./: .pre-commit-config.yaml  BUSINESS_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OPEN_SOURCE_STRATEGY.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.docker.txt  requirements.txt  setup.cfg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
docker/development/: Dockerfile  docker-compose.yml  start-with-local-ollama.sh
docker/production/: docker-compose.yml
docs/architecture/: system-design.md
docs/guides/: CURSOR_MCP_SETUP.md  DEVELOPMENT_RULES.md  LOCAL_DEVELOPMENT_SETUP.md  TROUBLESHOOTING.md
environments/production/: config.production.json
environments/staging/: config.staging.json
environments/test/: config.test.json
examples/: README.md  cursor-mcp-template.json
mcp_server/: Dockerfile  IMPLEMENTATION_SUMMARY.md  LOCAL_PRODUCTION_GUIDE.md  PERFORMANCE_REPORT.md  README.md  config.json  config.json.example  config.production.json  cursor_integration.py  demo_usage.py  deploy.sh  industry_tools.py  local_production_setup.sh  mcp_performance_results_1754735428.json  mcp_performance_test.py  performance_optimizer.py  requirements.basic.txt  requirements.production.txt  requirements.txt  server.py  server_startup_test_1754735478.json  setup.py  simple_test.py  simple_test_results_1754735324.json  start.sh  test_performance.py  test_server_startup.py
mcp_server/fine_tuning/: devops_dataset.jsonl  fine_tune.py
mcp_server/production/: DEPLOYMENT_STRATEGY.md  PRODUCTION_ARCHITECTURE.md  cost_calculator.py  deploy_aws.sh  quick_deploy.sh  user_management.py
scripts/: quick-local-setup.sh
scripts/setup/: deploy-professional.sh  quick-start.sh
tests/: __init__.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py
