[metadata]
name = infragenius
version = attr: mcp_server.__version__
author = Arya Soni
author_email = arya@#
maintainer = InfraGenius Team
maintainer_email = maintainers@#
description = AI-Powered DevOps & SRE Intelligence Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://#
project_urls =
    Documentation = https://docs.#
    Repository = https://github.com/infragenius/infragenius
    Bug Tracker = https://github.com/infragenius/infragenius/issues
    Changelog = https://github.com/infragenius/infragenius/blob/main/CHANGELOG.md
    Security Policy = https://github.com/infragenius/infragenius/blob/main/SECURITY.md
    Discussions = https://github.com/infragenius/infragenius/discussions
    Discord = https://discord.gg/infragenius
    Funding = https://github.com/sponsors/infragenius
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration
    Topic :: System :: Monitoring
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed
keywords =
    devops
    sre
    ai
    infrastructure
    automation
    monitoring
    cloud
    kubernetes
    docker
    observability

[options]
packages = find:
python_requires = >=3.9
install_requires =
    fastapi>=0.104.0
    uvicorn[standard]>=0.24.0
    pydantic>=2.4.0
    httpx>=0.25.0
    redis>=5.0.0
    psycopg2-binary>=2.9.0
    sqlalchemy>=2.0.0
    alembic>=1.12.0
    prometheus-client>=0.17.0
    structlog>=23.1.0
    typer>=0.9.0
    rich>=13.6.0
    pyyaml>=6.0.0
    jinja2>=3.1.0
    cryptography>=41.0.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.0
    python-multipart>=0.0.6
    aiofiles>=23.2.0
    aioredis>=2.0.0
    asyncpg>=0.28.0
    tenacity>=8.2.0
    cachetools>=5.3.0
include_package_data = True
zip_safe = False

[options.packages.find]
include = mcp_server*
exclude = tests*

[options.package_data]
mcp_server =
    *.json
    *.yaml
    *.yml
    templates/*.j2
    static/*

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    black>=23.7.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.5.0
    bandit>=1.7.0
    safety>=2.3.0
    pre-commit>=3.4.0
docs =
    mkdocs>=1.5.0
    mkdocs-material>=9.2.0
    mkdocstrings[python]>=0.23.0
test =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.11.0
    httpx>=0.25.0
    testcontainers>=3.7.0
performance =
    locust>=2.16.0
    memory-profiler>=0.61.0
    py-spy>=0.3.14
monitoring =
    opentelemetry-api>=1.20.0
    opentelemetry-sdk>=1.20.0
    opentelemetry-instrumentation-fastapi>=0.41b0
    jaeger-client>=4.8.0

[options.entry_points]
console_scripts =
    infragenius = mcp_server.cli:main
    infragenius-server = mcp_server.server:main

infragenius.plugins =
    devops = mcp_server.plugins.devops:DevOpsPlugin
    sre = mcp_server.plugins.sre:SREPlugin
    cloud = mcp_server.plugins.cloud:CloudPlugin
    platform = mcp_server.plugins.platform:PlatformPlugin

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
per-file-ignores =
    __init__.py:F401
    tests/*:S101

# mypy configuration
[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
show_error_codes = True

[mypy-ollama.*]
ignore_missing_imports = True

[mypy-prometheus_client.*]
ignore_missing_imports = True

[mypy-structlog.*]
ignore_missing_imports = True

[mypy-redis.*]
ignore_missing_imports = True

[mypy-psycopg2.*]
ignore_missing_imports = True

# Coverage configuration
[coverage:run]
source = mcp_server
omit =
    */tests/*
    */test_*.py
    */__pycache__/*
    */migrations/*
    */venv/*
    */.venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[coverage:html]
directory = htmlcov

# Tool configuration
[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
